--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,11 @@ eyre = "0.6.8"
 hex = { package = "const-hex", version = "1.6", features = ["hex"] }
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 clap = { version = "4.4.5", features = ["derive"] }
+rayon = "1.8.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "brute_codehash"
+harness = false
